Fixed menu placement and added a collapsed all group button

--- a/src/main/webapp/app/iris/overview/base-chatbot/entity-group-header/entity-group-header.component.scss
+++ b/src/main/webapp/app/iris/overview/base-chatbot/entity-group-header/entity-group-header.component.scss
@@ -4,7 +4,7 @@
     padding: 6px 8px;
     gap: 6px;
     cursor: pointer;
-    border-radius: 6px;
+    border-radius: var(--bs-border-radius-lg);
 
     &:hover {
         background-color: var(--iris-accent-background);
